Added stuff in 7.2

--- a/Annual Review 2019 Report/OneYearReport 0.5.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.5.tex
@@ -455,6 +455,15 @@ Since research is inherently exploratory and unpredictable, it is impossible to 
 
 \bigskip
 
+There are three immediate steps to be taken to start off the research. A simplistic model of multiple phases needs to be made, to then be refined throughout the project. Initially I will start off with a simple model with the installation and maintenance phases included, which can then be tested on a small fictional windfarm. The next step is including the decommission phase, and then iteratively add in details and refinements into the model. Which details will be added in, and in which order, depends on feasibility and how connected they are to the research questions outlined in the previous section. An exact plan can not be given until further on in the process. 
+
+The second step to be taken as soon as possible is starting data collection. My supervisors have worked extensively in this field, and I hope to get in contact with related companies and researchers to gather my data through them. Setting up this connection is important to do early on, as there can in practice be long waiting times before data can be gathered, and if it turns out to be difficult to acquire data alternative options need to be explored rapidly as well. In case some data can be acquired but it is not enough, the available data can potentially be used to generate realistic fictional data. Alternatively if no real data can be acquired I can potentially try to acquire a fictional data set that is close enough to real data to be useful. If none of these options are available, some strong assumptions will need to be made to answer some of these research questions, but this is a last resort, and hopefully at least some data is available. 
+
+The third step which is to be taken rapidly is to read more of the research regarding maintenance projects. At this point in time I have enough knowledge about it to work on the basic model I aim to start off with, but in order to make the appropriate refinements more literature needs to be read. I have however collected a large amount of research in this area, hence the amount of available research will not be a problem here. 
+
+%TODO: Change this into proper timeline, using the paragraphs below
+
+
 My immediate focus will now go to filling in my knowledge gaps regarding the maintenance projects. As stated before, some research has already been conducted, but there is significant reading of the literature to be done, which I aim to do in the upcoming months. I am planning to do the bulk of this reading in the next two months, although more reading of the literature will naturally be something I do throughout this project. After the majority of this reading is done, I plan to work on the optimisation and simulation models for installation projects, and integrate them. I will then implement them into the tool described in \Cref{s:sim}, and getting it operational for installation projects while remaining adaptable enough to later be used in maintenance and decommission projects as well. The tool should be operational for that within the next six months. During this time, I will also attempt to contact industry partners to acquire real(istic) data. My supervisors have both worked extensively within this field so I am hopeful they will be able to help me connect to outside companies.
 
 In the six months after that, I will attempt to design the models for both maintenance and decommission projects, in a similar structure to the model made for installation projects in order to improve compatibility. If data has been acquired from industry partners, some initial experiments to validate the tool up to this point will also be performed. After the models for each individual phase are completed, I will attempt to integrate them into one life-cycle spanning model. 
