--- a/Annual Review 2019 Report/OneYearReport 0.5.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.5.tex
@@ -461,30 +461,13 @@ The second step to be taken as soon as possible is starting data collection. My 
 
 The third step which is to be taken rapidly is to read more of the research regarding maintenance projects. At this point in time I have enough knowledge about it to work on the basic model I aim to start off with, but in order to make the appropriate refinements more literature needs to be read. I have however collected a large amount of research in this area, hence the amount of available research will not be a problem here. 
 
-%TODO: Change this into proper timeline, using the paragraphs below
-
-
-My immediate focus will now go to filling in my knowledge gaps regarding the maintenance projects. As stated before, some research has already been conducted, but there is significant reading of the literature to be done, which I aim to do in the upcoming months. I am planning to do the bulk of this reading in the next two months, although more reading of the literature will naturally be something I do throughout this project. After the majority of this reading is done, I plan to work on the optimisation and simulation models for installation projects, and integrate them. I will then implement them into the tool described in \Cref{s:sim}, and getting it operational for installation projects while remaining adaptable enough to later be used in maintenance and decommission projects as well. The tool should be operational for that within the next six months. During this time, I will also attempt to contact industry partners to acquire real(istic) data. My supervisors have both worked extensively within this field so I am hopeful they will be able to help me connect to outside companies.
-
-In the six months after that, I will attempt to design the models for both maintenance and decommission projects, in a similar structure to the model made for installation projects in order to improve compatibility. If data has been acquired from industry partners, some initial experiments to validate the tool up to this point will also be performed. After the models for each individual phase are completed, I will attempt to integrate them into one life-cycle spanning model. 
-
-Hopefully all of that is completed 12-14 months from now. After that, the tool needs to be adapted for the full life-cycle model. Once that is completed, full validation of the tool can be done with the aquired data, and if successful some experimental analysis can be done. The extend on this heavily depends on the amount of time available. There are many directions to go in and possible improvements to add to the tool, but some of them will likely have to be carried out in some future research project. For example, the tool might benefit from realistic imperfect weather forecasts, which are uncommon in the current literature but potentially a way to improve accuracy. Additional optimisation methods can also be implemented, so that various methods can be compared and possibly combined. Experiments with location and layout of sites could also be added in the future, whether that is this PhD project or another future project. 
-
-Finally a lot of writing on my PhD thesis will have to be done. I aim to write continuously throughout the project as it develops, using this report as a basis. However, at the end of the three years some time needs to be dedicated to finish up the writing. Ideally I will be able to complete this before the 3-year mark, but potentially the writing needs to be finished up in the few months afterwards. 
-
 \bigskip
 
-To summarise, this timeline would look like:
+Those are the immediate steps to be taken, and will be where my focus will lie for the next 3 months or so. After that, there will be a time where the main focus lies on improving the models and making them suited to answer the research questions. Determining how long this will take is difficult, as this is an area of research that I am not very familiar with and is unpredictable in nature. However if I had to give a timeframe, I would say I will spend a 6-8 month period primarily focused on model design, implementation, and verification. Secondary tasks in this time are data analysis (or generation, based on the availability of data as discussed above) and early writing. 
 
-\begin{itemize}
-	\item Year 2, second half: Read up more on maintenance projects and related research, design models for installation, implement those models in the tool, start initial contacts to acquire data
-	\item Year 3, first half: Design models for maintenance and decommission projects, run initial simple experiments if data is available, start design on the life-cycle spanning integrated model
-	\item Year 3, second half: Finish up the design of the model and implement it fully in the tool, validate tool and run analytical experiments. Writing will be kept up to data throughout the project, but it will be finalized at this time. 
-\end{itemize}
+Finally the rest of the project will mainly be spend on analysing the results and findings, and writing it all up. The time that will take is again hard to determine, and the time it took to write this report was significantly longer than expected. However in many projects it tends to be that the start is the hardest, so I have some confidence writing up the final thesis will go smoothly. 
 
-In this scenario I am able to research the entire life-cycle of an OWF and build a tool for decision support at any point in that life-cycle. But as I stated before, this is a rough timeline, and is subject to change depending on where progress is made. If very promising initial results come from the installation part of the project, there is a chance the main focus will shift there, and maintenance projects fall to a background role. Naturally the opposite might also happen, or those good results may be found for the decommission projects. 
-
-Writing additional papers is not included in this timeline, as this strongly depends on where significant results are found. However I would ideally publish at least one paper on the installation model, one on the maintenance model, and one on their combination. Writing them will have a strong overlap with writing the related chapters of my thesis, so this will coincide with the continual writing I am planning to do. 
+Apart from these primary areas of focus, some extra things outside the main research path might crop up. For example, I am looking into more courses and conferences to attend, and potentally some early findings might be written up in a seperate paper. These things will not be a primary focus, but depending on the research progress time may be made for them. 
 
 \pagebreak
 
