--- a/Annual Review 2019 Report/OneYearReport 0.5.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.5.tex
@@ -74,7 +74,7 @@ Question: #3
 \pagebreak
 
 \begin{abstract}
-This report aims to give a detailed overview of the research progress I made between March 2018 and September 2019, the first year of this PhD project into logistical decisions regarding offshore wind farms. It will explain the research subject, give an overview of the relevant literature I've read and the limitations of the current research. Furthermore, it will discuss the work I've done on a simulator, to be used for later research. Finally, the next steps and ultimate goals of this project are described. 
+This report aims to give a detailed overview of the research progress I made between March 2018 and September 2019, the first year and a bit of this PhD project into logistical decisions regarding offshore wind farms. It will explain the research subject, give an overview of the relevant literature I've read and the limitations of the current research. Furthermore, it will discuss the work I've done on a simulation tool, to be used for later research. Finally, the next steps and ultimate goals of this project are described. 
 \end{abstract}
 
 \pagebreak
@@ -89,7 +89,7 @@ Over the past year, I have been researching logistics related to offshore windfa
 
 Because of this, I expected a lot of research in this area had already been conducted, but this turned out to be less the case than I would have expected. Most research is fairly recent, and there are significant literature gaps. The primary obstacle in this logistics problem which separates it from more traditional logistics problems is the high degree of nondeterministic factors, mainly related to the weather conditions. These projects take place on open sea, where weather can often be rougher than on land. In addition, the high-tech vessels are performing operations on large industrial constructions, hence there is a limited range of allowed wind speeds and wave heights. Something else which can further limit possible schedules is the inflexibility involved in vessel rental, since vessels of the required calibre cannot be rented on short notice, and often need to be rented for at least some minimum amount of time \cite{kerkhove2017optimised}, so adaptive in-the-moment scheduling is impossible and we cannot simply wait for an expected period of good weather based on real-time data to rent the vessels; if we expected some period to have good weather but this turns out not to be the case, we will often have the vessels rented but unusable. This means the problem has a lot of nondeterministic factors which have a large impact; factors which any good solution approach will have to take into account. 
 
-In this report I will talk about my progress and what I have learned over the past year. First, in \Cref{s:project}, I will explain the examined problem in more detail, and introduce the goals of this research project. After that, in \Cref{s:lit}, I will recount the reading I have done so far, which was the main focus of my work over the past year. This will include both research on this specific project, and research in the more general fields of (stochastic) scheduling and common methods such as optimisation and simulation. This will be the main focus of the report, as it was the main focus of my work. In addition to reading up on the state of the current research, I have also started building a Simulation tool for this problem, which I will discuss in \Cref{s:sim}. My other activities, such as some courses about research that I followed, are summarised in \Cref{s:otact}. Finally, I will summarise my current standing and plans for future work in \Cref{s:concl}. 
+In this report I will talk about my progress and what I have learned over the past year. First, in \Cref{s:project}, I will explain the examined problem in more detail, and introduce the goals of this research project. After that, in \Cref{s:meth} the methods I intend to use (simulation and optimisation) will be discussed in detail. In \Cref{s:lit}, I will recount the reading I have done so far, which was the main focus of my work over the past year. This will include both research on this specific project, and research in the more general fields of (stochastic) scheduling. These two sections on methods and literature will be the main focus of the report, as it was the main focus of my work so far. In addition to reading up on the state of the current research, I have also started building a Simulation tool for this problem, which I will discuss in \Cref{s:sim}. My other activities, such as some courses about research that I followed, are summarised in \Cref{s:otact}. Finally, I will summarise my current standing and plans for future work in \Cref{s:concl}. 
 
 \pagebreak
 
@@ -473,8 +473,5 @@ Apart from these primary areas of focus, some extra things outside the main rese
 
 \bibliographystyle{agsm}
 \bibliography{mybib}
-
-%TODO: Uniformilize usage of I and We
-%TODO: Go through all \Cref tags and check whether all claims made are correct
 
 \end{document}
