--- a/Slides short presentation 03-20/shortpres.tex
+++ b/Slides short presentation 03-20/shortpres.tex
@@ -16,8 +16,8 @@
   \titlepage
 \end{frame}
 
-
 \begin{frame}{Initial model for installation}
+\footnotesize
 \begin{equation}
 	\text{maximize} \sum_{p \in P} [ DIS^p (A_p \cdot v_p - \sum_{r \in R} N_{rp} \cdot C_{rp}) ]
 \end{equation}
@@ -26,35 +26,37 @@
 subject to:
 
 \begin{align}
-s_i =& \max_{j \in IP_i}(f_j)				&	\forall i \in& I 									\\
-d_i =& \sum_{t = s_i}^{f_i} \omega_{it} 		& 	\forall i \in& I 									\\
-N_{rp} \geq& \sum_{i | s_i \leq t \leq f_i} \rho_{ir}	& 	\forall r \in& R   	&	\forall p \in& P 	&	t \in T_p  		\\
-A_p =&  \sum_{ f_i \leq \tau_p} 1   			&	\forall p \in& P         	&	\forall i \in& F
+1 =& \sum_{t \in T} s_{it}	= \sum_{t \in T} f_{it}										&	\forall i \in I 						\\
+1 \leq& \sum_{t = \dot{t}}^{\hat{t}} [ \sum_{t' = \dot{t}}^t f_{jt'} \cdot \sum_{t' = t}^{\hat{t}} s_{it'} ]	&	\forall (i, j) \in IP					\\
+d_i \geq& (f_{it''} + s_{it'} - 1) \cdot \sum_{t = t'}^{t''} \omega_{it} 							& 	\forall i \in I, 	\forall t'' \geq t' + d_i, t', t'' \in T	\\
+N_{rp} \geq& \sum_{i\in I} \sum_{t' = \dot{t}}^t \sum_{t'' = t}^{\hat{t}} s_{it'} \cdot f_{it''} \cdot \rho_{ir}	& 	\forall r \in R, \forall p \in P, \forall t \in T_p 	\\
+A_p =&  \sum_{ t = \dot{t}}^{\tau_p} \sum_{i \in F} f_{it}									&	\forall p \in P
 \end{align}
 
 \end{frame}
 
 \begin{frame}{Notation overview}
-\footnotesize
+\scriptsize
 
 \begin{columns}
 \begin{column}{.48\textwidth}
 Sets:
 \begin{itemize}
 \item $P$: All time periods (large scale)
-\item $T_p$: All time intervals (small scale) in period $p$
+\item $T$: All time intervals [$\dot{t}, \dots , \hat{t}$]
+\item $T_p \in T$: All time intervals (small scale) in period $p$
 \item $R$: All resources
 \item $I$: All tasks
 \item $F \subset I$: All final tasks that complete a turbine
-\item $IP_i$: All prerequisite tasks of task $i$
+\item $IP$: All precedency pairs ($i$, $j$)
 \end{itemize}
 
 Decision variables:
 \begin{itemize}
 \item $A_{p}$: Number of active turbines after period $p$
 \item $N_{rp}$: Number of resources $r$ used in period $p$
-\item $s_i$: Starting time of task $i$
-\item $f_i$: Finishing time of task $i$
+\item $s_{it}$: Binary variable, 1 if task $i$ starts at time $t$
+\item $f_{it}$: Binary variable, 1 if task $i$ ends at time $t$
 \end{itemize}
 \end{column}
 
