--- a/Slides short presentation 03-20/shortpres.tex
+++ b/Slides short presentation 03-20/shortpres.tex
@@ -80,6 +80,69 @@ Parameters:
 
 
 \begin{frame}{Initial model for maintenance}
+\footnotesize
+\begin{equation}
+	\text{maximize} \sum_{p \in P} [ DIS^p (A_p \cdot v_p - \sum_{r \in R} N_{rp} \cdot C_{rp}) ]
+\end{equation}
+
+\bigskip
+subject to:
+
+\begin{align}
+1 =& \sum_{t \in T} s_{it}	= \sum_{t \in T} f_{it}										&	\forall i \in I 						\\
+1 \leq& \sum_{t = \dot{t}}^{\hat{t}} [ \sum_{t' = \dot{t}}^t f_{jt'} \cdot \sum_{t' = t}^{\hat{t}} s_{it'} ]	&	\forall (i, j) \in IP					\\
+d_i \geq& (f_{it''} + s_{it'} - 1) \cdot \sum_{t = t'}^{t''} \omega_{it} 							& 	\forall i \in I, 	\forall t'' \geq t' + d_i, t', t'' \in T	\\
+N_{rp} \geq& \sum_{i\in I} \sum_{t' = \dot{t}}^t \sum_{t'' = t}^{\hat{t}} s_{it'} \cdot f_{it''} \cdot \rho_{ir}	& 	\forall r \in R, \forall p \in P, \forall t \in T_p 	\\
+A_p =&  \sum_{ t = \dot{t}}^{\tau_p} \sum_{i \in F} f_{it}									&	\forall p \in P
+\end{align}
+
+\end{frame}
+
+\begin{frame}{Notation overview}
+\scriptsize
+
+\begin{columns}
+\begin{column}{.48\textwidth}
+Sets:
+\begin{itemize}
+\item $P$: All time periods (large scale)
+\item $T$: All time intervals [$\dot{t}, \dots , \hat{t}$]
+\item $T_p \in T$: All time intervals (small scale) in period $p$
+\item $R$: All resources
+\item $I$: All tasks
+\item $F \subset I$: All final tasks that complete a turbine
+\item $IP$: All precedency pairs ($i$, $j$)
+\end{itemize}
+
+Decision variables:
+\begin{itemize}
+\item $A_{p}$: Number of active turbines after period $p$
+\item $N_{rp}$: Number of resources $r$ used in period $p$
+\item $s_{it}$: Binary variable, 1 if task $i$ starts at time $t$
+\item $f_{it}$: Binary variable, 1 if task $i$ ends at time $t$
+\end{itemize}
+\end{column}
+
+\hfill
+
+\begin{column}{.48\textwidth}
+Parameters:
+\begin{itemize}
+\item $DIS$: The discount factor per period
+\item $v_p$: The value of energy a single turbine produces in period $p$
+\item $C_{rp}$: The cost of chartering resource $r$ in period $p$
+\item $d_i$: The duration of task $i$
+\item $\omega_{it}$: Binary parameter representing weather, 1 if task $i$ can be completed at time $t$, 0 otherwise
+\item $\rho_{ir}$: The amount of resource $r$ used by task $i$
+\item $\tau_p$: The final time interval (from $T$) in period $p$
+\end{itemize}
+\end{column}
+\end{columns}
+
+\end{frame}
+
+
+\begin{frame}{Initial model for maintenance}
 \begin{equation}
 	\text{maximize} \sum_{p \in P} [ DIS^p (A_p \cdot v_p - \sum_{r \in R} N_{rp} \cdot C_{rp}) ]
 \end{equation}
