Updated report with Shafiee, CS412 marking stuff

--- a/Ongoing report/OngoingReport 1.0.tex
+++ b/Ongoing report/OngoingReport 1.0.tex
@@ -247,18 +247,40 @@ A final big limitation of this research has to do with one of the cashflows bein
 
 \subsection{Maintenance of the site} \label{ss:maint}
 
+%ONGOING: shafiee bits (changed)
 Compared to the topic of installation, there is a large body of research done in the area of operation and maintenance (O\&M) of offshore wind farms. This research looks at various aspects and timescales relevant to the OWFs. In \cite{shafiee2015maintenance} the research and topics are divided into three timescales (echelons):
 
 \begin{enumerate}
 \item Strategic: Long term, over the lifespan of an OWF
+\begin{itemize}
+\item Wind farm design for reliability
+\item Location/Capacity of maintenance accommodations
+\item Maintenance strategy selection
+\item Outsourcing decisions
+\end{itemize}
 \item Tactical: Medium term, between 1 and 5 years
+\begin{itemize}
+\item Spare parts management
+\item Maintenance support organization
+\item Purchasing/leasing decisions
+\end{itemize}
 \item Operational: Short term, day to day
+\begin{itemize}
+\item Maintenance scheduling
+\item Routing of maintenance vessels
+\item Performance measurement
+\end{itemize}
 \end{enumerate}
 
-Within each of these echelons, various areas of research are identified. Strategic decisions are found to have the biggest impact on the costs of operations, which makes sense as they affect the largest amount of time. However each of these echelons include important decisions that will have to be made for the maintenance of the sites. 
+Decisions within the strategic echelon are found to have the biggest impact on the costs of operations, which makes sense as they affect the largest amount of time. However each of these echelons include important decisions that will have to be made for the maintenance of the sites. Besides providing this framework to categorize research, they also highlight which areas appear most thoroughly researched, and identify some unexplored areas. Potentially due to their large impact, the topics within the strategic echelon have received most attention, while the topics in the operational echelon received least. The writers indicate they these shorter term areas might hold unexplored potential for future research. Additionally some related topics that might improve help in related maintenance logistics are discussed, such as the creation of a database with scenarios and case studies.
+
+\bigskip
 
 One aspect to consider is fleet size. In \cite{staalhane2019optimizing} a two-stage stochastic programming model is used to first determine which vessels to charter, and then how to use the cartered vessels. In their computational study this approach is compared to several life-cycle cost estimating simulation models from the literature, and it is found to give reasonable estimates on the resulting costs. Additionally it is shown to require relatively low computational power, and can therefore be used to support maintenance decisions made. 
 
+\bigskip
+
+%TODO: Remove
 With the large amount of research done, and the variety of subjects within this field, I have yet to read much more about the current state of most subjects. This will be my immediate focus from here on, as described in more detail in \Cref{s:concl}.
 
 \bigskip
