Wrote about besnard and data plan

--- a/Ongoing report/mybib.bib
+++ b/Ongoing report/mybib.bib
@@ -430,3 +430,12 @@
   year={2013},
   publisher={Routledge}
 }
+
+@inproceedings{besnard2011stochastic,
+  title={A stochastic model for opportunistic maintenance planning of offshore wind farms},
+  author={Besnard, Fran{\c{c}}ois and Patriksson, Michael and Str{\"o}mberg, Ann-Brith and Wojciechowski, Adam and Fischer, Katharina and Bertling, Lina},
+  booktitle={2011 IEEE Trondheim PowerTech},
+  pages={1--8},
+  year={2011},
+  organization={IEEE}
+}
