--- a/Model slides/models.tex
+++ b/Model slides/models.tex
@@ -19,7 +19,7 @@
 \begin{frame}{Initial model for installation}
 \footnotesize
 \begin{equation}
-	\text{maximize} \sum_{p \in P} [ DIS^p (A_p \cdot v_p - \sum_{r \in R} N_{rp} \cdot C_{rp}) ]
+	\text{maximize} \sum_{p \in P} [ DIS^p (O_p \cdot v_p - \sum_{r \in R} N_{rp} \cdot C_{rp}) ]
 \end{equation}
 
 \bigskip
@@ -30,7 +30,7 @@ subject to:
 1 \leq& \sum_{t = \dot{t}}^{\hat{t}} [ \sum_{t' = \dot{t}}^t f_{it'} \cdot \sum_{t' = t}^{\hat{t}} s_{jt'} ]	&	\forall (i, j) \in IP					\\
 d_i \geq& (f_{it''} + s_{it'} - 1) \cdot \sum_{t = t'}^{t''} \omega_{it} 							& 	\forall i \in I, 	\forall t'' \geq t' + d_i, t', t'' \in T	\\
 N_{rp} \geq& \sum_{i\in I} \sum_{t' = \dot{t}}^t \sum_{t'' = t}^{\hat{t}} s_{it'} \cdot f_{it''} \cdot \rho_{ir}	& 	\forall r \in R, \forall p \in P, \forall t \in T_p 	\\
-A_p =&  \sum_{ t = \dot{t}}^{\tau_p} \sum_{i \in F} f_{it}									&	\forall p \in P
+O_p =&  \sum_{ t = \dot{t}}^{\tau_p} \sum_{i \in F} f_{it}									&	\forall p \in P
 \end{align}
 
 \end{frame}
@@ -62,7 +62,7 @@ Sets:
 
 Decision variables:
 \begin{itemize}
-\item $A_{p}$: Number of active turbines after period $p$
+\item $O_{p}$: Number of online turbines after period $p$
 \item $N_{rp}$: Number of resources $r$ used in period $p$
 \item $s_{it}$: Binary variable, 1 if task $i$ starts at time $t$
 \item $f_{it}$: Binary variable, 1 if task $i$ ends at time $t$
@@ -91,7 +91,7 @@ Parameters:
 \begin{frame}{Initial model for maintenance}
 \footnotesize
 \begin{equation}
-	\text{maximize} \sum_{t \in T} [ DIS^t (O_t \cdot v_t - \sum_{r \in R} N_{rt} \cdot C_{rt}) ]
+	\text{maximize} \sum_{p \in P} [ DIS^p (\sum_{t\in T_p} (O_t \cdot v_t)  - \sum_{r\in R} (N_{rp} \cdot C_{rp})) ]
 \end{equation}
 
 \bigskip
@@ -115,7 +115,7 @@ subject to (2):
 \begin{align}
 d_a \geq& (f_{act''} + s_{act'} - 1) \cdot \sum_{t = t'}^{t''} \omega_{it} 						& 	\begin{aligned} \forall a \in A, \forall c \in C, \\
 																		\forall t'' \geq t' + d_i, t', t'' \in T 	\end{aligned}\\
-N_{rt} \geq& \sum_{a\in A} \sum_{c\in C} \sum_{t' = \dot{t}}^t \sum_{t'' = t}^{\hat{t}} s_{act'} \cdot f_{act''} \cdot \rho_{ar}	& 	\forall r \in R, \forall t \in T	\\
+N_{rp} \geq& \sum_{a\in A} \sum_{c\in C} \sum_{t' = \dot{t}}^t \sum_{t'' = t}^{\hat{t}} s_{act'} \cdot f_{act''} \cdot \rho_{ar}	& 	\forall r \in R, \forall p \in P, \forall t \in T_p	\\
 b_{at} <&  \sum_{t' = t - \lambda_a}^t - f_{act'}										&	\forall a \in A, \forall t \in T 	\\
 O_t =&  |A| - \sum_{a \in A} b_{at}												&	\forall t \in T
 \end{align} }
@@ -129,19 +129,21 @@ O_t =&  |A| - \sum_{a \in A} b_{at}												&	\forall t \in T
 (9) Ensures each optional maintenance cycle to be started at most once	\\
 (10) Ensures that every maintenance cycle for a particular asset that is started is also finished	\\
 (11) Ensures that between the starting and finish times of each cycle are enough timesteps with acceptable weather	\\
-(12) Counts up the resources needed in a timestep summing up over all active tasks (an $s$ before and $f$ after $t$)	\\
+(12) Counts up the resources needed in a time period summing up over all active tasks (an $s$ before and $f$ after $t$)	\\
 (13) If no maintenance tasks have finished in the past $\lambda_a$ timesteps this asset is broken	\\
 (14) The number of active (online) turbines is equal to everything that isn't broken
 \end{frame}
 
 \begin{frame}{Notation overview}
-\scriptsize
+\tiny
 
 \begin{columns}
 \begin{column}{.48\textwidth}
 Sets:
 \begin{itemize}
-\item $T$: All time intervals [$\dot{t}, \dots , \hat{t}$]
+\item $P$: All time periods (large scale)
+\item $T$: All time intervals (small scale) [$\dot{t}, \dots , \hat{t}$]
+\item $T_p \in T$: All time intervals (small scale) in period $p$
 \item $R$: All resources
 \item $A$: All assets
 \item $C = C^M \cup C^O$: All (mandatory and optional) maintenance cycles
@@ -150,7 +152,7 @@ Sets:
 Decision variables:
 \begin{itemize}
 \item $O_{t}$: Number of active turbines at timestep $t$
-\item $N_{rt}$: Number of resources $r$ used at timestep $t$
+\item $N_{rp}$: Number of resources $r$ used in period $p$
 \item $s_{act}$: Binary variable, 1 if maintenance cycle $c$ for asset $a$ starts at time $t$
 \item $f_{act}$: Binary variable, 1 if maintenance cycle $c$ for asset $a$ finishes at time $t$
 \item $b_{at}$: Binary variable, 1 if asset $a$ is broken at timestep $t$
@@ -162,9 +164,9 @@ Decision variables:
 \begin{column}{.48\textwidth}
 Parameters:
 \begin{itemize}
-\item $DIS$: The discount factor per timestep
+\item $DIS$: The discount factor per time period
 \item $v_t$: The value of energy a single turbine produces at timestep $t$
-\item $C_{rt}$: The cost of chartering resource $r$ at timestep $t$
+\item $C_{rp}$: The cost of chartering resource $r$ in period $p$
 \item $d_a$: The duration of a maintenance cycle for asset $a$
 \item $\lambda_a$: The number of timesteps after the last maintenance before asset $a$ fails
 \item $\omega_{it}$: Binary parameter representing weather, 1 if task $i$ can be completed at time $t$, 0 otherwise
